Fix uneven look of grid slider section

--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ main{
 #gridlines-section{
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 label[for='gridlines-toggle']{
